# cpp-msauth

./: .gitmodules  CMakeLists.txt  README.md
include/: EXAMPLE.h  MSAuth.h
src/: EXAMPLE.cpp  MSAuth.cpp
